# rl_arm

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
assets/urdf/: ur5_like.urdf
configs/: default.yaml  ur5.yaml  ur5e.yaml
configs/algo/: sac.yaml
configs/environment/: sim.yaml
configs/experiments/: elbow_crossing.yaml  forearm_crossing.yaml  formal_matrix.yaml  no_obstacle.yaml  random_crossing.yaml  upper_arm_crossing.yaml  ur5_ldrc_adaptive_100k.yaml  ur5_ldrc_adaptive_50k.yaml  ur5_short_train.yaml  ur5e_short_train.yaml  wrist_crossing.yaml
configs/robot/: ur5.yaml  ur5_like.yaml  ur5e.yaml
configs/run/: dev.yaml
configs/sweeps/: c_safe.yaml  event_cost.yaml  fixed_risk_penalty.yaml  risk_high.yaml
docs/: progress_report_20260722.md  progress_report_20260723.md  progress_report_20260723_143050.md  thesis_outline.md  training_guide.md
outputs/: latest_run.txt
outputs/formal/: commands.sh
outputs/formal/eval/: ee_fixed_seed101_step100000_eval100_seed1001.csv  ee_fixed_seed101_step100000_eval100_seed1002.csv  ee_fixed_seed101_step100000_eval100_seed1003.csv  ldrc_adaptive_seed101_step40000_eval100_seed1001.csv  ldrc_adaptive_seed101_step40000_eval100_seed1002.csv  ldrc_adaptive_seed101_step40000_eval100_seed1003.csv  ldrc_adaptive_seed101_step60000_eval100_seed1001.csv  ldrc_fixed_seed101_step50000_eval100_seed1001.csv  (+5 more)
scripts/: evaluate.py  plot_traces.py  prepare_experiments.py  prepare_sweeps.py  smoke_test.py  summarize_results.py  train.py
src/rl_risk_sac/: __init__.py
tests/: test_risk.py  test_smoke.py
(+208 files in other folders)
