[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-risk-sac"
version = "0.1.0"
description = "Link-level dynamic risk constrained SAC prototype for UR5-like obstacle avoidance."
requires-python = ">=3.13"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "tqdm>=4.66",
  "pyyaml>=6.0",
  "gymnasium>=0.29",
  "torch>=2.2",
  "pybullet>=3.2.6",
]

[tool.setuptools.packages.find]
where = ["src"]
